; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_main.c_cas_terminal_owner.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_main.c_cas_terminal_owner.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.MPContext = type { i32 }

@terminal_owner_lock = common dso_local global i32 0, align 4
@terminal_owner = common dso_local global %struct.MPContext* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.MPContext*, %struct.MPContext*)* @cas_terminal_owner to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cas_terminal_owner(%struct.MPContext* %0, %struct.MPContext* %1) #0 {
  %3 = alloca %struct.MPContext*, align 8
  %4 = alloca %struct.MPContext*, align 8
  %5 = alloca i32, align 4
  store %struct.MPContext* %0, %struct.MPContext** %3, align 8
  store %struct.MPContext* %1, %struct.MPContext** %4, align 8
  %6 = call i32 @pthread_mutex_lock(i32* @terminal_owner_lock)
  %7 = load %struct.MPContext*, %struct.MPContext** @terminal_owner, align 8
  %8 = load %struct.MPContext*, %struct.MPContext** %3, align 8
  %9 = icmp eq %struct.MPContext* %7, %8
  %10 = zext i1 %9 to i32
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %5, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  %14 = load %struct.MPContext*, %struct.MPContext** %4, align 8
  store %struct.MPContext* %14, %struct.MPContext** @terminal_owner, align 8
  br label %15

15:                                               ; preds = %13, %2
  %16 = call i32 @pthread_mutex_unlock(i32* @terminal_owner_lock)
  %17 = load i32, i32* %5, align 4
  ret i32 %17
}

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
